--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -31,7 +31,7 @@
                 <a href="">Facebook</a>
                 <a href="">Twitter</a>
                 <a href="">Google</a>
-                <p>or Sign Up using</p>
+                <p>or you could Sign Up using</p>
                 <a href="">SIGN UP</a>
                 </form>
         </div>
