--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--CSS-->    
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Font Family -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6a654b6015.js" crossorigin="anonymous"></script>
     <title>Developing our Self</title>
 </head>
 <body>
@@ -16,7 +19,7 @@
                 <div>
                     <ul>
                         <li>
-                            <a href="logIn">Sign In</a>
+                            <a href="./pages/signIn.html">Sign In</a>
                         </li>
                         <li>
                             <a href="logIn">Sign up</a>
