--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
+    <!-- Font Family -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6a654b6015.js" crossorigin="anonymous"></script>
     <title>LogIn</title>
 </head>
 <body>
-    <header>
+    <header class="header-Sign">
         <!-- HEADER -->
         <nav>
             <div>
@@ -18,21 +22,37 @@
             </div>
         </nav>
     </header>
-    <main>
-        <div>
-            <form class="form">
-                <label for="" class="label-email">Email<input type="email" placeholder="Type your email"></label>
-                <label for="" class="label-name">Password<input type="password" placeholer="Type your password"></label>
-                <a href="#">
-                    <p>Forgot password?</p>
-                </a>
-                <input type="button" value="LOGIN">
-                <p>or Sign Up using</p>
-                <a href="">Facebook</a>
-                <a href="">Twitter</a>
-                <a href="">Google</a>
-                <p>or you could Sign Up using</p>
-                <a href="">SIGN UP</a>
+    <main class="main-Sign">
+        <div class="main-Sign__info">
+            <div class="main-Sign__text">
+                <div class="main-Sign__square">
+                    <h1>Find your way through <strong>personal development</strong></h1>
+                    <p>Books, courses, coaches, youtube channels and much more</p>
+                </div>
+            </div>
+        </div>
+        <div class="main-Sign__container">
+            <form class="main-Sign__form">
+                <h2 class="main-Sign__form--h2">Hey, hello</h2><!--how to add an emoji-->
+                <p class="main-Sign__form--description">Enter the information you entered while registering</p>
+                <label for="" class="main-Sign__label main-Sign__label--email">Email</label>
+                <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="">
+                <label for="" class="main-Sign__label  main-Sign__label--password">Password</label>
+                <input class="main-Sign__input main-Sign__input--password" type="password" placeholer="Type your password">
+                <div class="main-Sign__help">
+                    <p>Remember me</p>
+                    <a class="main-Sign__forgot" href="#">
+                        <p>Forgot password?</p>
+                    </a>
+                </div>
+                <input class="main-Sign__input main-Sign--btn" type="button" value="LOGIN">
+                <p class="main-Sign__other-option">or Sign in using</p> <!--how to add lines as a divisor-->
+                <ul class="main-Sign__social-media">
+                    <li><a class="main-Sign__social-media--facebook" href="#"><i class="fa-brands fa-facebook"></i></a></li><!--logos-->
+                    <li><a class="main-Sign__social-media--twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a class="main-Sign__social-media--google" href="#"><i class="fa-brands fa-google"></i></a></li>
+                </ul>
+                <a class="main-Sign__create-account" href="#">Create account</a>
                 </form>
         </div>
     </main>
