--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="containerStart">
-                <a href="#">
+                <a href="./pages/home.html">
                     <p>Let's start!</p>
                 </a>
             </div>
