--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -9,7 +9,7 @@
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6a654b6015.js" crossorigin="anonymous"></script>
-    <title>LogIn</title>
+    <title>Developing our Self</title>
 </head>
 <body>
     <header class="header-Sign">
