--- a/pages/home.html
+++ b/pages/home.html
@@ -55,59 +55,13 @@
                 </ul>
             </aside>
             <main class="main-Home">
-            
-            </main>
-            <!-- <footer class="footer">
-                <div class="section1">
-                    <h3 class="section1__mision">
-                        Club Social y Deportivo <br><strong>UNIÓN AMERICANA</strong>
-                    </h3>
-                    <p class="section1__p">
-                        <strong>Nuestra misión</strong><br>
-                        Fomentar y desarrollar en nuestros socios deportistas y socios generales el deporte
-                        competitivo, formativo y recreativo; promoviendo nuestros valores y la integración
-                        entre nuestros miembros, siendo el pilar fundamental contener a nuestros jóvenes en
-                        el seno de la Institución.
-                    </p>
-                </div>
-                <div class="section2">
-                    <div class="section2__h4">
-                        <h4>REDES SOCIALES</h4>
-                    </div>
-                    <div class="section2__links">
-                        <!-- QUIERO APRENDER WOW -->
-                        <ul class="section2__redes">
-                            <li>
-                                <a href="https://www.facebook.com/FutsalUnionAmericana" target="_blank">
-                                    <i class="fa-brands fa-facebook fa-xl"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/futsalunionamericana/?hl=es" target="_blank">
-                                    <i class="fa-brands fa-instagram fa-xl"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/" target="_blank">
-                                    <i class="fa-brands fa-twitter fa-xl"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <p>Sede: Chassaing 1650, Rosario, Santa Fe</p>
-                        <p>Anexo Sebastian Figuerola (R), Muiño 9300, Rosario, Santa Fe</p>
-                        <p>Administración: 4514948 (Lun. a Sab. de 9 a 21hs)</p>
-                        <p>PileCA (natación): 451 2144</p>
-                        <p>Email: uamericana@gmail.com</p>
-                    </div>
-                </div>
-                <div class="section3">
-                    <span class="section3__span">
-                        <p class="section3__terminos">Términos y condiciones</p>
-                        <p class="section3__copyright">Copyright © 2020/22 CA | Santamaria Manuel Diseños</p>
-                    </span>
-                </div>
-            </footer> -->
+            </main> 
         </div>
+    <footer class="footer">
+        <div class="footer__mision"></div>
+        <div class="footer__socialMedia"></div>
+        <div class="footer__rights"></div>
+    </footer>
     </div>
 </body>
 </html>
