inicio mobile first -> inicio

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/6a654b6015.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <title>Developing our Self</title>
 </head>
 <body>
-    <div class="gridContainer">
+    <div class="grid-container-inicio">
         <!-- HEADER -->
-        <header class="header">
+        <header class="header-inicio">
             <nav>
                 <div>
-                    <ul>
+                    <ul class="header-inicio__ul">
                         <li>
                             <a href="./pages/signIn.html">Sign In</a>
                         </li>
@@ -28,30 +28,30 @@
                 </div>
             </nav>
         </header>
-        <main class="main">
-            <div class="containerTitle">
+        <main class="main-inicio">
+            <div class="main-inicio__title">
                 <h1 class="h1">Developing our Self</h1> <!--que este titulo vaya cambiando-->
             </div>
-            <div class="containerOptions"> <!--como hacer un carrusel?-->
-                <div class="arrow">
-                    <button class="button1"></button>
+            <div class="main-inicio__options"> <!--como hacer un carrusel?-->
+                <div class="main-inicio__arrow">
+                    <button class="main-inicio__arrow--btn main-inicio__arrow--btn1"></button>
                 </div>
-                <div class="containerBoxes">
-                    <div class="containerBox">
+                <div class="main-inicio__boxes">
+                    <div class="main-inicio__box main-inicio__box--entrepeneur">
                         <p>Entrepreneurship</p>
                     </div>
-                    <div class="containerBox">
+                    <div class="main-inicio__box main-inicio__box--emotional">
                         <p>Emotional Intelligence</p>
                     </div>
-                    <div class="containerBox">
+                    <div class="main-inicio__box main-inicio__box--health">
                         <p>Health Care</p>
                     </div>
                 </div>
-                <div class="arrow">
-                    <button class="button2"></button>
+                <div class="main-inicio__arrow">
+                    <button class="main-inicio__arrow--btn main-inicio__arrow--btn2"></button>
                 </div>
             </div>
-            <div class="containerStart">
+            <div class="main-inicio__start">
                 <a href="./pages/home.html">
                     <p>Let's start!</p>
                 </a>
