--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -8,54 +8,60 @@
     <link rel="stylesheet" href="../styles/style.css">
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/6a654b6015.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <title>Developing our Self</title>
 </head>
 <body>
-    <header class="header-Sign">
-        <!-- HEADER -->
-        <nav>
-            <div>
-                <a href="../index.html">
-                    <p>DEVELOPING OUR SELF</p>
-                </a>
-            </div>
-        </nav>
-    </header>
-    <main class="main-Sign">
-        <div class="main-Sign__info">
-            <div class="main-Sign__text">
-                <div class="main-Sign__square">
-                    <h1>Find your way through <strong>personal development</strong></h1>
-                    <p>Books, courses, coaches, youtube channels and much more</p>
-                </div>
-            </div>
-        </div>
-        <div class="main-Sign__container">
-            <form class="main-Sign__form">
-                <h2 class="main-Sign__form--h2">Hey, hello</h2><!--how to add an emoji-->
-                <p class="main-Sign__form--description">Enter the information you entered while registering</p>
-                <label for="" class="main-Sign__label main-Sign__label--email">Email</label>
-                <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="">
-                <label for="" class="main-Sign__label  main-Sign__label--password">Password</label>
-                <input class="main-Sign__input main-Sign__input--password" type="password" placeholer="Type your password">
-                <div class="main-Sign__help">
-                    <p>Remember me</p>
-                    <a class="main-Sign__forgot" href="#">
-                        <p>Forgot password?</p>
+    <div class="grid-container-sign">
+        <header class="header-Sign">
+            <!-- HEADER -->
+            <nav>
+                <div class="header-Sign__logo">
+                    <a href="../index.html">
+                        <p>DEVELOPING OUR SELF</p>
                     </a>
                 </div>
-                <input class="main-Sign__input main-Sign--btn" type="button" value="LOGIN">
-                <p class="main-Sign__other-option">or Sign in using</p> <!--how to add lines as a divisor-->
-                <ul class="main-Sign__social-media">
-                    <li><a class="main-Sign__social-media--facebook" href="#"><i class="fa-brands fa-facebook"></i></a></li><!--logos-->
-                    <li><a class="main-Sign__social-media--twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a class="main-Sign__social-media--google" href="#"><i class="fa-brands fa-google"></i></a></li>
-                </ul>
-                <a class="main-Sign__create-account" href="#">Create account</a>
-                </form>
-        </div>
-    </main>
+            </nav>
+        </header>
+        <main class="main-Sign">
+            <div class="main-Sign__info">
+                <div class="main-Sign__text">
+                    <div class="main-Sign__square">
+                        <h1>Find your way through <strong>personal development</strong></h1>
+                        <p>Books, courses, coaches, youtube channels and much more</p>
+                    </div>
+                </div>
+            </div>
+            <div class="main-Sign__container">
+                <form class="main-Sign__form">
+                    <h2 class="main-Sign__form--h2">Hey, hello</h2><!--how to add an emoji-->
+                    <p class="main-Sign__form--description">Enter the information you entered while registering</p>
+                    <label for="" class="main-Sign__label main-Sign__label--email">Email</label>
+                    <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="">
+                    <label for="" class="main-Sign__label  main-Sign__label--password">Password</label>
+                    <input class="main-Sign__input main-Sign__input--password" type="password" placeholer="Type your password">
+                    <div class="main-Sign__help">
+                        <p>Remember me</p>
+                        <a class="main-Sign__forgot" href="#">
+                            <p>Forgot password?</p>
+                        </a>
+                    </div>
+                    <input class="main-Sign__input main-Sign--btn" type="button" value="LOGIN">
+                    <p class="main-Sign__other-option">or Sign in using</p> <!--how to add lines as a divisor-->
+                    <ul class="main-Sign__social-media">
+                        <li>
+                            <a class="main-Sign__social-media--facebook" href="#" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li><!--logos-->
+                        <li><a class="main-Sign__social-media--twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a class="main-Sign__social-media--google" href="#"><i class="fa-brands fa-google"></i></a></li>
+                    </ul>
+                    <a class="main-Sign__create-account" href="#">Create account</a>
+                    </form>
+            </div>
+        </main>
+    </div>
     <script src=""></script>
 </body>
 </html>
