--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,29 +12,34 @@
     <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <title>Developing our Self</title>
 </head>
+
 <body>
     <div class="grid-container-home">
         <header class="header-Home">
             <div class="header-Home__start">
                 <div class="header-Home__start--menu">
-                    <a href=""><i class="fa-solid fa-bars"></i></a>
+                    <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
                 </div>
-                <div class="header-Home__start--brand"></div>
+                <div class="header-Home__start--brand">
+                    BOOK TRACKER
+                </div>
             </div>
             <div class="header-Home__center">
                 <div class="header-Home__search">
-                    <div class="header-Home__search--input"></div>
-                    <div class="header-Home__search--btn">
+                    <div class="header-Home__search--input search-div">
+                        <input class="search__input" type="text" placeholder="Search a book" name="" id="">
+                    </div>
+                    <div class="header-Home__search--btn search-div">
                         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                     </div>
                 </div>
             </div>
             <div class="header-Home__end">
-                <div class="header-Home__end--notification">
-                    <a href=""><i class="fa-regular fa-bell"></i></a>
+                <div class="header-Home__end--notification end__btn">
+                    <a href=""><i class="fa-regular fa-bell fa-lg"></i></a>
                 </div>
-                <div class="header-Home__end--user">
-                    <a href=""><i class="fa-regular fa-user"></i></a>
+                <div class="header-Home__end--user end__btn">
+                    <a href=""><i class="fa-regular fa-user fa-lg"></i></a>
                 </div>
             </div>
         </header>
@@ -55,13 +61,138 @@
                 </ul>
             </aside>
             <main class="main-Home">
-            </main> 
+                <div class="main-Home__recommended">
+                    <h1 class="main-Home__recommended--h1">Recommended Books</h1>
+                    <div class="main-Home__recommended-container">
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/comoGanarAmigos.webp" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">Como ganar amigos e influir sobre las
+                                    personas</h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>Dale Carnegie<br>Autoayuda <br>288 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/historyTime.jpeg" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">Una breve historia del tiempo</h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>Stephen Hawking<br>Ciencia<br>256 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/sutilArte.jpg" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">El sutil arte de que todo te importe una
+                                    mierda</h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>Mark Manson<br>Autoayuda <br>224 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/sapiens.webp" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">Sapiens: Breve historia de la humanidad
+                                </h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>Yuval Noah Harari<br>Historia<br>464 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/daVinci.webp" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">El Código Da Vinci</h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>Dan Brown<br>Thriller<br>489 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__recommended-box">
+                            <div class="main-Home__recommended-box--img">
+                                <img src="./img/1984.jpeg" alt="">
+                            </div>
+                            <div class="main-Home__recommended-info">
+                                <h5 class="main-Home__recommended-info--title">1984</h5>
+                                <div class="main-Home__recommended-info--body">
+                                    <p>George Orwell<br>Ficción <br>328 páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-Home__current">
+                    <h2 class="main-Home__current--h2">Current Books</h2>
+                    <div class="main-Home__current-container">
+                        <div class="main-Home__current-box">
+                            <div class="main-Home__current-box--img"></div>
+                            <div class="main-Home__current-info">
+                                <h5 class="main-Home__current-info--title">Nombre del libro</h5>
+                                <div class="main-Home__current-info--body">
+                                    <p>Nombre del autor<br>Genero<br>Páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__current-box">
+                            <div class="main-Home__current-box--img"></div>
+                            <div class="main-Home__current-info">
+                                <h5 class="main-Home__current-info--title">Nombre del libro</h5>
+                                <div class="main-Home__current-info--body">
+                                    <p>Nombre del autor<br>Genero<br>Páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__current-box">
+                            <div class="main-Home__current-box--img"></div>
+                            <div class="main-Home__current-info">
+                                <h5 class="main-Home__current-info--title">Nombre del libro</h5>
+                                <div class="main-Home__current-info--body">
+                                    <p>Nombre del autor<br>Genero<br>Páginas</p>
+                                    <progress value="50" max="100"></progress>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-Home__current-box">
+                            <div class="main-Home__current-box--img"></div>
+                            <div class="main-Home__current-info">
+                                <h5 class="main-Home__current-info--title">Nombre del libro</h5>
+                                <div class="main-Home__current-info--body">
+                                    <progress value="50" max="100"></progress>
+                                    <p>Nombre del autor<br>Genero<br>Páginas</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </main>
         </div>
-    <footer class="footer">
-        <div class="footer__mision"></div>
-        <div class="footer__socialMedia"></div>
-        <div class="footer__rights"></div>
-    </footer>
+        <footer class="footer">
+            <div class="footer__mision"></div>
+            <div class="footer__socialMedia"></div>
+            <div class="footer__rights"></div>
+        </footer>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
