--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -27,14 +27,14 @@
             <div class="main-Sign__info">
                 <div class="main-Sign__text">
                     <div class="main-Sign__square">
-                        <h1>Find your way through <strong>personal development</strong></h1>
+                        <h1><i class="fa-fw fa-solid fa-play"></i> Find your way through <strong>personal development</strong></h1>
                         <p>Books, courses, coaches, youtube channels and much more</p>
                     </div>
                 </div>
             </div>
             <div class="main-Sign__container">
                 <form class="main-Sign__form">
-                    <h2 class="main-Sign__form--h2">Hey, hello</h2><!--how to add an emoji-->
+                    <h2 class="main-Sign__form--h2">Hey, hello &#128075</h2><!--how to add an emoji-->
                     <p class="main-Sign__form--description">Enter the information you entered while registering</p>
                     <label for="" class="main-Sign__label main-Sign__label--email">Email</label>
                     <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="">
@@ -47,7 +47,11 @@
                         </a>
                     </div>
                     <input class="main-Sign__input main-Sign--btn" type="button" value="LOGIN">
-                    <p class="main-Sign__other-option">or Sign in using</p> <!--how to add lines as a divisor-->
+                    <div class="main-Sign__divisor">
+                        <div class="main-Sign__divisor-side main-Sign__divisor-side--left"><hr></div>
+                            <p class="main-Sign__other-option">or Sign in using</p>
+                        <div class="main-Sign__divisor-side main-Sign__divisor-side--right"><hr></div>
+                    </div>
                     <ul class="main-Sign__social-media">
                         <li>
                             <a class="main-Sign__social-media--facebook" href="#" target="_blank">
