new icons and structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <a href="./pages/signIn.html">Sign In</a>
                         </li>
                         <li>
-                            <a href="logIn">Sign up</a>
+                            <a href="#">Sign up</a>
                         </li>
                     </ul>
                 </div>
