Background and structure changes

--- a/index.html
+++ b/index.html
@@ -16,47 +16,63 @@
         <!-- HEADER -->
         <header class="header-inicio">
             <nav>
-                <div>
-                    <ul class="header-inicio__ul">
+                <div class="header-inicio__container">
+                    <div class="header-inicio__container--logo">
+                        <p>DEVELOPING OUR SELF</p>
+                    </div>
+                    <ul class="header-inicio__container--ul">
                         <li>
                             <a href="./pages/signIn.html">Sign In</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#">Sign up</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
         </header>
         <main class="main-inicio">
-            <div class="main-inicio__title">
-                <h1 class="h1">Developing our Self</h1> <!--que este titulo vaya cambiando-->
-            </div>
-            <div class="main-inicio__options"> <!--como hacer un carrusel?-->
-                <div class="main-inicio__arrow">
-                    <button class="main-inicio__arrow--btn main-inicio__arrow--btn1"></button>
+            <div class="main-inicio-first">
+                <div class="main-inicio-first__title">
+                    <h1 class="main-inicio-first__title--h1">Developing our Self</h1> <!--que este titulo vaya cambiando-->
+                    <p class="main-inicio-first__title--description">Empower Yourself and Achieve Your Full Potential with Personal Development</p>
+                    <!-- Empower Yourself, Unleash Your Inner Strength, and Achieve Your Full Potential with Our Personal Development Resources and Coaching -->
                 </div>
-                <div class="main-inicio__boxes">
-                    <div class="main-inicio__box main-inicio__box--entrepeneur">
-                        <p>Entrepreneurship</p>
-                    </div>
-                    <div class="main-inicio__box main-inicio__box--emotional">
-                        <p>Emotional Intelligence</p>
-                    </div>
-                    <div class="main-inicio__box main-inicio__box--health">
-                        <p>Health Care</p>
+                <div class="main-inicio-first__action">
+                    <div class="main-inicio-first__action--container">
+                        <a href="./pages/home.html">
+                            <p>Let's start!</p>
+                        </a>
                     </div>
                 </div>
-                <div class="main-inicio__arrow">
-                    <button class="main-inicio__arrow--btn main-inicio__arrow--btn2"></button>
+                <div class="main-inicio-first__image">
+                    <div class="main-inicio-first__image--container">
+                        <img class="main-inicio-first__image--img" src="./images/girlEdited.jpg" alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="main-inicio__start">
-                <a href="./pages/home.html">
-                    <p>Let's start!</p>
-                </a>
             </div>
         </main>
+    </div>
+    <div class="main-inicio-second">
+        <div class="main-inicio-second__options"> 
+            <div class="main-inicio-second__arrow">
+                <button class="main-inicio-second__arrow--btn main-inicio-second__arrow--btn1"></button>
+            </div>
+            <div class="main-inicio-second__boxes">
+                <div class="main-inicio-second__box main-inicio-second__box--entrepeneur">
+                    <p>Entrepreneurship</p>
+                </div>
+                <div class="main-inicio-second__box main-inicio-second__box--emotional">
+                    <p>Emotional Intelligence</p>
+                </div>
+                <div class="main-inicio-second__box main-inicio-second__box--health">
+                    <p>Health Care</p>
+                </div>
+            </div>
+            <div class="main-inicio-second__arrow">
+                <button class="main-inicio-second__arrow--btn main-inicio-second__arrow--btn2"></button>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
