--- a/pages/home.html
+++ b/pages/home.html
@@ -59,9 +59,9 @@
         <div class="container-home">
             <aside class="aside-home">
                 <ul class="aside-home__ul">
-                    <li class="aside-home__li aside-home__li--meditacion">
+                    <li class="aside-home__li aside-home__li--fitness">
                         <a href=""><lord-icon
-                            src="https://cdn.lordicon.com/ndppaqfb.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
+                            src="https://cdn.lordicon.com/hovbgwmd.json" trigger="hover" colors="primary:#00008b,secondary:#000008b" style="width:30px;height:30px"  stroke="70">
                         </lord-icon>                          
                         </a>
                         <p>Fitness & Health</p>
