Before any mistake

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,15 +23,15 @@
             </div>
         </div>
         <div class="header__center">
-            <div class="header__search">
-                <div class="header__search--input search-div">
+            <!-- <div class="header__search"> -->
+                <!-- <div class="header__search--input search-div">
                     <input class="search__input" type="text" placeholder="Search a book" name="" id="">
-                </div>
+                </div> -->
                 <div class="header__search--btn search-div">
                     <a href=""><lord-icon src="https://cdn.lordicon.com/xfftupfv.json" trigger="hover" colors="primary:#00008b">
                     </lord-icon></a>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
         <div class="header__end">
             <div class="header__end--notification end__btn">
@@ -123,9 +122,9 @@
             <button class="bar-home__btn">
                 <div class="bar-home__btn--text">Influencers</div>
             </button>
-            <div class="bar-home__arrow">
+            <!-- <div class="bar-home__arrow">
                 <button class="bar-home__arrow--btn"></button>
-            </div>
+            </div> -->
         </div>
         <main class="main-home">
             <div class="main-home__recommended">
