Lateral Scroll Bars

--- a/pages/home.html
+++ b/pages/home.html
@@ -252,7 +252,7 @@
                             <div class="main-home__recommended-boxes--box">
                                 <div class="main-home__recommended--pic">
                                     <img class="main-home__recommended--pic-img" src="../images/globalLeadership.jpg" alt="">
-                                    <img class="main-home__recommended--pic-brand" src="../images/asu.webp" alt="">
+                                    <!-- <img class="main-home__recommended--pic-brand" src="../images/asu.webp" alt=""> -->
                                 </div>
                                 <div class="main-home__recommended--title">
                                     <p class="main-home__recommended--title-p">Global Leadership and Personal Development</p>
